--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Server Status</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            padding: 50px;
-        }
-        .status {
-            display: inline-block;
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+      }
+      .status {
+        text-align: center;
+        background-color: #4caf50;
+        color: white;
+        padding: 40px;
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        font-size: 1.8em;
+      }
+      h1 {
+        margin-top: 0;
+        font-size: 2.5em;
+      }
+      p {
+        margin-bottom: 0.5em;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="status">
-        <h1>Server Status: Running</h1>
-        <p>Your server is up and running smoothly!</p>
-        <p>Have a good day! 😊</p>
+      <h1>💻Server Status: Running✅</h1>
+      <p>Your server is up and running smoothly!</p>
+      <p>Have a good day! 😊</p>
     </div>
-</body>
+  </body>
 </html>
